--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'E011'
 - !lcsh 'Latin America -- History'
 - !lcsh 'America -- Discovery and exploration'
+- GITenberg
 title: 'The Discovery of America Vol. 1 (of 2)
 
   with some account of Ancient America and the Spanish Conquest'
